# blender.nvim

./: .editorconfig  .gitignore  README.md  launch_blender.py  launcher.py  pyproject.toml
blender_nvim/: LICENSE  __init__.py  communication.py  dap.py  environment.py  installation.py  load_addons.py  rpc.py  test.py  ui.py  utils.py
blender_nvim/operators/: __init__.py  addon_update.py  script_runner.py  stop_blender.py
lua/blender/: actions.lua  commands.lua  dap.lua  emitter.lua  highlights.lua  init.lua  manager.lua  notify.lua  panel.lua  profile.lua  rpc.lua  task.lua  types.lua  util.lua
lua/blender/components/: buffer.lua
lua/blender/config/: init.lua  schema.lua  transform.lua  types.lua  validate.lua
lua/blender/profile/: detect.lua  init.lua
lua/blender/rpc/: client.lua  init.lua
lua/blender/signal/: types.lua  utils.lua
lua/blender/ui/: init.lua  manage_task.lua  output_panel.lua  select_profile.lua  test.lua
