[project]
name = "blender-nvim"
dynamic = ["version"]
description = ''
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Maddison Hellstrom" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "requests",
  "debugpy",
  "flask",
  "pynvim",
]

[project.urls]
Documentation = "https://github.com/b0o/blender.nvim"
Issues = "https://github.com/b0o/blender.nvim/issues"
Source = "https://github.com/b0o/blender.nvim"

[tool.hatch.envs.default]
dependencies = [
  "fake-bpy-module-4.0",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.11"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:blender_nvim}"

